refactor(project): spotless 포맷팅 적용